# MarkdownEdit

./: *.ts  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.22  CMakeLists.txt.user.4.8-pre1  MarkdownEdit.pro  MarkdownEdit_de.ts  README.md  TEST  _config.yml  about.cpp  about.h  autosave.cpp  autosave.h  common.h  default.md  document.cpp  document.h  index.html  index.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markdownedit.html  markdownedit.js  markdownedit.worker.js  parser.cpp  parser.h  previewpage.cpp  previewpage.h  ressource.qrc  script.js  settings.ui  site.webmanifest  styles.css
.github/: CODEOWNERS
.github/workflows/: build.yml  release.yml
.qt/: QtDeploySupport.cmake  deploy_markdownedit_8e2880e2e0
android/: AndroidManifest.xml
cmake/: FindNuspell.cmake  Packaging.cmake  TranslationUtils.cmake
include/: io.github.tim_gromeyer.MarkdownEdit.desktop
include/flatpak/: MarkdownEdit.desktop  appdata.xml  com.github.tim_gromeyer.MarkdownEdit.yml  io.github.tim_gromeyer.MarkdownEdit.yml
installer/config/: config.xml
packaging/: MarkdownEdit.deb  build.sh
packaging/MarkdownEdit/DEBIAN/: control
packaging/MarkdownEdit/usr/share/applications/: MarkdownEdit.desktop
packaging/flatpak/: MarkdownEdit.desktop  appdata.xml  io.github.software-made-easy.MarkdownEdit.json  io.github.software-made-easy.MarkdownEdit.yml  org.flatpak.MarkdownEdit.json  org.flatpak.MarkdownEdit.yml  org.flatpak.markdownedit.appdata.xml  org.flatpak.markdownedit.json  org.flatpak.markdownedit.yml
packaging/installer/config/: config.xml
resources/: default.md  markdowneditor.qrc
ressources/: dark_theme.qss  default.md  icons.qrc  ressources.qrc  syntax_de.md  syntax_en.md
ressources/logo/: Icon.icns  Icon.rc  icons.sh
ressources/syntax/: de.md  en.md
ressources/xml/iso-codes/: iso_639.xml
scripts/: build-flatpak.sh  build.sh  clang-format.sh  requirements.sh  requirements.txt  setup.sh  updateTranslations.sh
snap/: snapcraft.yaml
src/: about.cpp  about.h  common.cpp  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  markdowndialog.cpp  markdowndialog.h  markdowneditor.cpp  markdowneditor.h  markdownparser.cpp  markdownparser.h  parser (Kopie).cpp  parser.cpp  parser.h  previewwidget.cpp  previewwidget.h  settings.cpp  settings.h  spellchecker.cpp  spellchecker.h  spellchecker2.cpp  spellchecker2.h  switchlabel.cpp  switchlabel.h  tableofcontents.cpp  tableofcontents.h  tablewidget.cpp  tablewidget.h  todoobjectinterface.cpp  todoobjectinterface.h  utils.cpp  utils.h
translations/: MarkdownEdit_de.ts  MarkdownEdit_de_DE.ts  translations.qrc
ui/: mainwindow.ui
